--- a/models/transformer/yolov5l_fusion_flir_bcam_multi_scale.yaml
+++ b/models/transformer/yolov5l_fusion_flir_bcam_multi_scale.yaml
@@ -39,32 +39,32 @@ backbone:
 
     ######### Multi-Scale BCAM (Fused Outputs Only) #############
     
-    [[4,14], 1, BCAM_SingleOutput, [256]],   # 21: P3 fused  
-    [[6,16], 1, BCAM_SingleOutput, [512]],   # 22: P4 fused
-    [[9,19], 1, BCAM_SingleOutput, [1024]],  # 23: P5 fused
+    [[4,14], 1, BCAM_SingleOutput, [256]],   # 20: P3 fused  
+    [[6,16], 1, BCAM_SingleOutput, [512]],   # 21: P4 fused
+    [[9,19], 1, BCAM_SingleOutput, [1024]],  # 22: P5 fused
   ]
 
 head:
   [
     # Use fused features directly
-    [-1, 1, Conv, [512, 1, 1]],             # 24: P5 projection
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 25: P5→P4
-    [[-1,22], 1, Concat, [1]],              # 26: P5 + P4 fused
-    [-1, 3, C3, [512, False]],              # 27: P4 processed
+    [-1, 1, Conv, [512, 1, 1]],             # 23: P5 projection (1024->512)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 24: P5→P4 (20x20 -> 40x40)
+    [[-1,21], 1, Concat, [1]],              # 25: P5 upsampled + P4 fused (both 40x40)
+    [-1, 3, C3, [512, False]],              # 26: P4 processed
 
-    [-1, 1, Conv, [256, 1, 1]],             # 28: P4 projection  
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 29: P4→P3
-    [[-1,21], 1, Concat, [1]],              # 30: P4 + P3 fused
-    [-1, 3, C3, [256, False]],              # 31: P3 final
+    [-1, 1, Conv, [256, 1, 1]],             # 27: P4 projection (512->256)  
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 28: P4→P3 (40x40 -> 80x80)
+    [[-1,20], 1, Concat, [1]],              # 29: P4 upsampled + P3 fused (both 80x80)
+    [-1, 3, C3, [256, False]],              # 30: P3 final
 
     # Downsample path
-    [-1, 1, Conv, [256, 3, 2]],             # 32: P3→P4
-    [[-1,27], 1, Concat, [1]],              # 33: Cat with P4
-    [-1, 3, C3, [512, False]],              # 34: P4 final
+    [-1, 1, Conv, [256, 3, 2]],             # 31: P3→P4 (80x80 -> 40x40)
+    [[-1,26], 1, Concat, [1]],              # 32: P3 down + P4 processed (both 40x40)
+    [-1, 3, C3, [512, False]],              # 33: P4 final
 
-    [-1, 1, Conv, [512, 3, 2]],             # 35: P4→P5
-    [[-1,24], 1, Concat, [1]],              # 36: Cat with P5
-    [-1, 3, C3, [1024, False]],             # 37: P5 final
+    [-1, 1, Conv, [512, 3, 2]],             # 34: P4→P5 (40x40 -> 20x20)
+    [[-1,23], 1, Concat, [1]],              # 35: P4 down + P5 projected (both 20x20)
+    [-1, 3, C3, [1024, False]],             # 36: P5 final
 
-    [[31, 34, -1], 1, Detect, [nc, anchors]], # Detection
+    [[30, 33, 36], 1, Detect, [nc, anchors]], # Detection heads
   ]
