--- a/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
+++ b/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
@@ -47,19 +47,20 @@ backbone:
     [20, 1, Conv, [512, 1, 1]],                     # 21: Project P5 context (1024→512)
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 22: Upsample P5 to P4 size
     
-    # Concatenate RGB_P4 + Thermal_P4 + P5_context → Single BCAM
-    [[6, 16, 22], 1, Concat, [1]],                  # 23: Cat (512+512+512=1536ch)
-    [-1, 1, Conv, [1024, 1, 1]],                    # 24: Project (1536→1024)
-    [-1, 1, BCAM_SingleOutput, [512]],              # 25: P4 BCAM with P5 context
+    # Method 1: Project P5 context and add to RGB/Thermal separately
+    [22, 1, Conv, [512, 1, 1]],                     # 23: Project P5 context to P4 dims
+    [[6, 23], 1, Add, []],                          # 24: Add P5 context to RGB P4
+    [[16, 23], 1, Add, []],                         # 25: Add P5 context to Thermal P4
+    [[24, 25], 1, BCAM_SingleOutput, [512]],        # 26: P4 BCAM with enhanced features
     
     # Step 3: Progressive P3 (RGB + Thermal + P4 context) 
-    [25, 1, Conv, [256, 1, 1]],                     # 26: Project P4 result (512→256)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 27: Upsample P4 to P3 size
+    [26, 1, Conv, [256, 1, 1]],                     # 27: Project P4 result (512→256)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 28: Upsample P4 to P3 size
     
-    # Concatenate RGB_P3 + Thermal_P3 + P4_context → Single BCAM
-    [[4, 14, 27], 1, Concat, [1]],                  # 28: Cat (256+256+256=768ch)
-    [-1, 1, Conv, [512, 1, 1]],                     # 29: Project (768→512)
-    [-1, 1, BCAM_SingleOutput, [256]],              # 30: P3 BCAM with P4 context
+    # Method 1: Project P4 context and add to RGB/Thermal separately
+    [[4, 28], 1, Add, []],                          # 29: Add P4 context to RGB P3
+    [[14, 28], 1, Add, []],                         # 30: Add P4 context to Thermal P3
+    [[29, 30], 1, BCAM_SingleOutput, [256]],        # 31: P3 BCAM with enhanced features
   ]
 
 head:
@@ -70,14 +71,14 @@ head:
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 32: P5 upsample
     
     # P4 path: Use progressive P4  
-    [25, 1, Conv, [256, 1, 1]],                     # 33: Project P4 progressive
+    [26, 1, Conv, [256, 1, 1]],                     # 33: Project P4 progressive
     [[32, 33], 1, Concat, [1]],                     # 34: Concat P5_up + P4_prog (768ch)
     [-1, 3, C3, [512, False]],                      # 35: Process P4
     
     # P3 path: Use progressive P3
     [-1, 1, Conv, [256, 1, 1]],                     # 36: Project for P3
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 37: Upsample to P3
-    [30, 1, Conv, [256, 1, 1]],                     # 38: Project P3 progressive
+    [31, 1, Conv, [256, 1, 1]],                     # 38: Project P3 progressive
     [[37, 38], 1, Concat, [1]],                     # 39: Concat P4_up + P3_prog (512ch)
     [-1, 3, C3, [256, False]],                      # 40: P3 final
 
