--- a/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
+++ b/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
@@ -47,20 +47,25 @@ backbone:
     [20, 1, Conv, [512, 1, 1]],                     # 21: Project P5 context (1024→512)
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 22: Upsample P5 to P4 size
     
-    # Method 1: Project P5 context and add to RGB/Thermal separately
-    [22, 1, Conv, [512, 1, 1]],                     # 23: Project P5 context to P4 dims
-    [[6, 23], 1, Add, []],                          # 24: Add P5 context to RGB P4
-    [[16, 23], 1, Add, []],                         # 25: Add P5 context to Thermal P4
-    [[24, 25], 1, BCAM_SingleOutput, [512]],        # 26: P4 BCAM with enhanced features
+    # Simple concatenation approach (more stable than Add)
+    [[6, 16, 22], 1, Concat, [1]],                  # 23: Cat RGB_P4 + Thermal_P4 + P5_context
+    [-1, 1, Conv, [1024, 1, 1]],                    # 24: Project concatenated features
+    # Split back into RGB and Thermal for BCAM
+    [-1, 1, Conv, [512, 1, 1]],                     # 25: Enhanced RGB P4
+    [24, 1, Conv, [512, 1, 1]],                     # 26: Enhanced Thermal P4  
+    [[25, 26], 1, BCAM_SingleOutput, [512]],        # 27: P4 BCAM
     
     # Step 3: Progressive P3 (RGB + Thermal + P4 context) 
-    [26, 1, Conv, [256, 1, 1]],                     # 27: Project P4 result (512→256)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 28: Upsample P4 to P3 size
+    [27, 1, Conv, [256, 1, 1]],                     # 28: Project P4 result (512→256)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 29: Upsample P4 to P3 size
     
-    # Method 1: Project P4 context and add to RGB/Thermal separately
-    [[4, 28], 1, Add, []],                          # 29: Add P4 context to RGB P3
-    [[14, 28], 1, Add, []],                         # 30: Add P4 context to Thermal P3
-    [[29, 30], 1, BCAM_SingleOutput, [256]],        # 31: P3 BCAM with enhanced features
+    # Simple concatenation approach (more stable than Add)
+    [[4, 14, 29], 1, Concat, [1]],                  # 30: Cat RGB_P3 + Thermal_P3 + P4_context
+    [-1, 1, Conv, [512, 1, 1]],                     # 31: Project concatenated features
+    # Split back into RGB and Thermal for BCAM
+    [-1, 1, Conv, [256, 1, 1]],                     # 32: Enhanced RGB P3
+    [31, 1, Conv, [256, 1, 1]],                     # 33: Enhanced Thermal P3
+    [[32, 33], 1, BCAM_SingleOutput, [256]],        # 34: P3 BCAM
   ]
 
 head:
@@ -71,25 +76,25 @@ head:
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 32: P5 upsample
     
     # P4 path: Use progressive P4  
-    [26, 1, Conv, [256, 1, 1]],                     # 33: Project P4 progressive
-    [[32, 33], 1, Concat, [1]],                     # 34: Concat P5_up + P4_prog (768ch)
-    [-1, 3, C3, [512, False]],                      # 35: Process P4
+    [27, 1, Conv, [256, 1, 1]],                     # 36: Project P4 progressive
+    [[35, 36], 1, Concat, [1]],                     # 37: Concat P5_up + P4_prog (768ch)
+    [-1, 3, C3, [512, False]],                      # 38: Process P4
     
     # P3 path: Use progressive P3
-    [-1, 1, Conv, [256, 1, 1]],                     # 36: Project for P3
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 37: Upsample to P3
-    [31, 1, Conv, [256, 1, 1]],                     # 38: Project P3 progressive
-    [[37, 38], 1, Concat, [1]],                     # 39: Concat P4_up + P3_prog (512ch)
-    [-1, 3, C3, [256, False]],                      # 40: P3 final
+    [-1, 1, Conv, [256, 1, 1]],                     # 39: Project for P3
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 40: Upsample to P3
+    [34, 1, Conv, [256, 1, 1]],                     # 41: Project P3 progressive
+    [[40, 41], 1, Concat, [1]],                     # 42: Concat P4_up + P3_prog (512ch)
+    [-1, 3, C3, [256, False]],                      # 43: P3 final
 
     # Downsample path
-    [-1, 1, Conv, [256, 3, 2]],                     # 41: P3→P4 down
-    [[41, 35], 1, Concat, [1]],                     # 42: Cat with P4 path
-    [-1, 3, C3, [512, False]],                      # 43: P4 final
+    [-1, 1, Conv, [256, 3, 2]],                     # 44: P3→P4 down
+    [[44, 38], 1, Concat, [1]],                     # 45: Cat with P4 path
+    [-1, 3, C3, [512, False]],                      # 46: P4 final
 
-    [-1, 1, Conv, [512, 3, 2]],                     # 44: P4→P5 down
-    [[44, 31], 1, Concat, [1]],                     # 45: Cat with P5 path
-    [-1, 3, C3, [1024, False]],                     # 46: P5 final
+    [-1, 1, Conv, [512, 3, 2]],                     # 47: P4→P5 down
+    [[47, 32], 1, Concat, [1]],                     # 48: Cat with P5 path
+    [-1, 3, C3, [1024, False]],                     # 49: P5 final
 
-    [[40, 43, 46], 1, Detect, [nc, anchors]],       # Detection heads
+    [[43, 46, 49], 1, Detect, [nc, anchors]],       # Detection heads
   ]
