--- a/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
+++ b/models/transformer/yolov5l_fusion_FLIR_cascade_pmbcaf.yaml
@@ -1,100 +1,97 @@
-# PMB-CAF: Simplified Progressive Multi-Scale BCAM - FIXED INDEXING
-# All operations at P5 resolution (20x20) to avoid tensor size mismatches
+# Adaptive Progressive BCAM - Handles Variable Input Sizes
+# Uses relative spatial matching instead of fixed 20x20
 
 nc: 3
-depth_multiple: 1.00  # YOLOv5l
+depth_multiple: 1.00
 width_multiple: 1.00
 
 anchors:
-  - [10,13, 16,30, 33,23]   # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
+  - [10,13, 16,30, 33,23]
+  - [30,61, 62,45, 59,119]  
+  - [116,90, 156,198, 373,326]
 
 backbone:
   [
-    ######### Dual Streams (0-19) - STANDARD YOLO #############
+    ######### Standard YOLO Dual Streams (0-19) #############
     # RGB Stream: 0-9
-    [-1, 1, Focus, [64, 3]],        # 0: (B, 64, 320, 320)
-    [-1, 1, Conv, [128, 3, 2]],     # 1: (B, 128, 160, 160)
-    [-1, 3, C3, [128]],             # 2: (B, 128, 160, 160)
-    [-1, 1, Conv, [256, 3, 2]],     # 3: (B, 256, 80, 80)
-    [-1, 9, C3, [256]],             # 4: (B, 256, 80, 80) <- RGB P3
-    [-1, 1, Conv, [512, 3, 2]],     # 5: (B, 512, 40, 40)
-    [-1, 9, C3, [512]],             # 6: (B, 512, 40, 40) <- RGB P4
-    [-1, 1, Conv, [1024, 3, 2]],    # 7: (B, 1024, 20, 20)
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 8: (B, 1024, 20, 20)
-    [-1, 3, C3, [1024, False]],     # 9: (B, 1024, 20, 20) <- RGB P5
+    [-1, 1, Focus, [64, 3]],        # 0
+    [-1, 1, Conv, [128, 3, 2]],     # 1
+    [-1, 3, C3, [128]],             # 2
+    [-1, 1, Conv, [256, 3, 2]],     # 3
+    [-1, 9, C3, [256]],             # 4 <- RGB P3
+    [-1, 1, Conv, [512, 3, 2]],     # 5
+    [-1, 9, C3, [512]],             # 6 <- RGB P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 7
+    [-1, 1, SPP, [1024, [5, 9, 13]]], # 8
+    [-1, 3, C3, [1024, False]],     # 9 <- RGB P5
 
     # Thermal Stream: 10-19
-    [-4, 1, Focus, [64, 3]],        # 10: (B, 64, 320, 320)
-    [-1, 1, Conv, [128, 3, 2]],     # 11: (B, 128, 160, 160)
-    [-1, 3, C3, [128]],             # 12: (B, 128, 160, 160)
-    [-1, 1, Conv, [256, 3, 2]],     # 13: (B, 256, 80, 80)
-    [-1, 9, C3, [256]],             # 14: (B, 256, 80, 80) <- Thermal P3
-    [-1, 1, Conv, [512, 3, 2]],     # 15: (B, 512, 40, 40)
-    [-1, 9, C3, [512]],             # 16: (B, 512, 40, 40) <- Thermal P4
-    [-1, 1, Conv, [1024, 3, 2]],    # 17: (B, 1024, 20, 20)
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 18: (B, 1024, 20, 20)
-    [-1, 3, C3, [1024, False]],     # 19: (B, 1024, 20, 20) <- Thermal P5
+    [-4, 1, Focus, [64, 3]],        # 10
+    [-1, 1, Conv, [128, 3, 2]],     # 11
+    [-1, 3, C3, [128]],             # 12
+    [-1, 1, Conv, [256, 3, 2]],     # 13
+    [-1, 9, C3, [256]],             # 14 <- Thermal P3
+    [-1, 1, Conv, [512, 3, 2]],     # 15
+    [-1, 9, C3, [512]],             # 16 <- Thermal P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 17
+    [-1, 1, SPP, [1024, [5, 9, 13]]], # 18
+    [-1, 3, C3, [1024, False]],     # 19 <- Thermal P5
 
-    ######### SIMPLIFIED PROGRESSIVE FUSION #############
+    ######### ADAPTIVE Progressive Fusion #############
     
     # P5 BCAM: Establish semantic context
-    [[9,19], 1, BCAM_SingleOutput, [1024]],         # 20: (B, 1024, 20, 20)
-    
-    # P4 Progressive: Downsample P4 to P5 resolution for processing
-    [6, 1, nn.AdaptiveAvgPool2d, [20]],              # 21: (B, 512, 20, 20) <- RGB P4 → P5 res
-    [16, 1, nn.AdaptiveAvgPool2d, [20]],             # 22: (B, 512, 20, 20) <- Thermal P4 → P5 res
-    [20, 1, Conv, [512, 1, 1]],                     # 23: (B, 512, 20, 20) <- P5 context projected
-    
-    # P4 concatenation: f=[21, 22, 23] - all (B, 512, 20, 20)
-    [[21, 22, 23], 1, Concat, [1]],                 # 24: (B, 1536, 20, 20)
-    [-1, 1, Conv, [512, 1, 1]],                     # 25: (B, 512, 20, 20) <- P4 enhanced RGB
-    [24, 1, Conv, [512, 1, 1]],                     # 26: (B, 512, 20, 20) <- P4 enhanced Thermal
-    [[25, 26], 1, BCAM_SingleOutput, [512]],        # 27: (B, 512, 20, 20) <- P4 BCAM result
-    
-    # P3 Progressive: Downsample P3 to P5 resolution for processing
-    [4, 1, nn.AdaptiveAvgPool2d, [20]],              # 28: (B, 256, 20, 20) <- RGB P3 → P5 res
-    [14, 1, nn.AdaptiveAvgPool2d, [20]],             # 29: (B, 256, 20, 20) <- Thermal P3 → P5 res
-    [27, 1, Conv, [256, 1, 1]],                     # 30: (B, 256, 20, 20) <- P4 context projected
-    
-    # P3 concatenation: f=[28, 29, 30] - all (B, 256, 20, 20)
-    [[28, 29, 30], 1, Concat, [1]],                 # 31: (B, 768, 20, 20)
-    [-1, 1, Conv, [256, 1, 1]],                     # 32: (B, 256, 20, 20) <- P3 enhanced RGB
-    [31, 1, Conv, [256, 1, 1]],                     # 33: (B, 256, 20, 20) <- P3 enhanced Thermal
-    [[32, 33], 1, BCAM_SingleOutput, [256]],        # 34: (B, 256, 20, 20) <- P3 BCAM result
+    [[9,19], 1, BCAM_SingleOutput, [1024]],         # 20: P5 fused
+
+    # P4 Progressive: Match P5 spatial dimensions dynamically
+    # Use interpolation instead of fixed pooling
+    [20, 1, Conv, [512, 1, 1]],                     # 21: Project P5 context
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 22: P5 context to P4 size
+
+    # P4 Fusion: All tensors now at P4 size  
+    [[6, 16, 22], 1, Concat, [1]],                  # 23: RGB_P4 + Thermal_P4 + P5_context
+    [-1, 1, Conv, [512, 1, 1]],                     # 24: Enhanced RGB P4
+    [23, 1, Conv, [512, 1, 1]],                     # 25: Enhanced Thermal P4
+    [[24, 25], 1, BCAM_SingleOutput, [512]],        # 26: P4 BCAM
+
+    # P3 Progressive: Match P4 spatial dimensions dynamically
+    [26, 1, Conv, [256, 1, 1]],                     # 27: Project P4 context
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 28: P4 context to P3 size
+
+    # P3 Fusion: All tensors now at P3 size
+    [[4, 14, 28], 1, Concat, [1]],                  # 29: RGB_P3 + Thermal_P3 + P4_context  
+    [-1, 1, Conv, [256, 1, 1]],                     # 30: Enhanced RGB P3
+    [29, 1, Conv, [256, 1, 1]],                     # 31: Enhanced Thermal P3
+    [[30, 31], 1, BCAM_SingleOutput, [256]],        # 32: P3 BCAM
   ]
 
 head:
   [
-    ######### Detection Head - Upsample to Detection Resolutions #############
+    ######### Standard YOLO Head #############
     
-    # P5 detection path: 20x20 → 20x20 (no change needed)
-    [20, 1, Conv, [512, 1, 1]],                     # 35: (B, 512, 20, 20)
+    # P5 detection path
+    [20, 1, Conv, [512, 1, 1]],                     # 33: P5 processed
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 34: P5→P4 upsample
     
-    # P4 detection path: 20x20 → 40x40
-    [27, 1, Conv, [256, 1, 1]],                     # 36: (B, 256, 20, 20)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 37: (B, 256, 40, 40)
-    [35, 1, nn.Upsample, [None, 2, 'nearest']],     # 38: (B, 512, 40, 40)
-    [[37, 38], 1, Concat, [1]],                     # 39: (B, 768, 40, 40)
-    [-1, 3, C3, [512, False]],                      # 40: (B, 512, 40, 40) <- P4 detection
+    # P4 detection path
+    [26, 1, Conv, [256, 1, 1]],                     # 35: P4 progressive processed
+    [[34, 35], 1, Concat, [1]],                     # 36: P5+P4 concat
+    [-1, 3, C3, [512, False]],                      # 37: P4 final
     
-    # P3 detection path: 20x20 → 80x80
-    [34, 1, Conv, [256, 1, 1]],                     # 41: (B, 256, 20, 20)
-    [-1, 1, nn.Upsample, [None, 4, 'nearest']],     # 42: (B, 256, 80, 80)
-    [40, 1, Conv, [256, 1, 1]],                     # 43: (B, 256, 40, 40)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 44: (B, 256, 80, 80)
-    [[42, 44], 1, Concat, [1]],                     # 45: (B, 512, 80, 80)
-    [-1, 3, C3, [256, False]],                      # 46: (B, 256, 80, 80) <- P3 detection
-    
-    # Standard YOLO detection head
-    [-1, 1, Conv, [256, 3, 2]],                     # 47: (B, 256, 40, 40) <- P3→P4
-    [[47, 40], 1, Concat, [1]],                     # 48: (B, 768, 40, 40)
-    [-1, 3, C3, [512, False]],                      # 49: (B, 512, 40, 40) <- P4 final
-    
-    [-1, 1, Conv, [512, 3, 2]],                     # 50: (B, 512, 20, 20) <- P4→P5
-    [[50, 35], 1, Concat, [1]],                     # 51: (B, 1024, 20, 20)
-    [-1, 3, C3, [1024, False]],                     # 52: (B, 1024, 20, 20) <- P5 final
-    
-    [[46, 49, 52], 1, Detect, [nc, anchors]],       # 53: Detection heads
+    # P3 detection path
+    [-1, 1, Conv, [256, 1, 1]],                     # 38: P4→P3 projection
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 39: P4→P3 upsample
+    [32, 1, Conv, [256, 1, 1]],                     # 40: P3 progressive processed
+    [[39, 40], 1, Concat, [1]],                     # 41: P4+P3 concat
+    [-1, 3, C3, [256, False]],                      # 42: P3 final
+
+    # Standard detection head
+    [-1, 1, Conv, [256, 3, 2]],                     # 43: P3→P4 down
+    [[43, 37], 1, Concat, [1]],                     # 44: P4 path
+    [-1, 3, C3, [512, False]],                      # 45: P4 detection
+
+    [-1, 1, Conv, [512, 3, 2]],                     # 46: P4→P5 down
+    [[46, 33], 1, Concat, [1]],                     # 47: P5 path
+    [-1, 3, C3, [1024, False]],                     # 48: P5 detection
+
+    [[42, 45, 48], 1, Detect, [nc, anchors]],       # Detection heads
   ]
