--- a/models/transformer/yolov5_fusion_FLIR_p3_only_bcam.yaml
+++ b/models/transformer/yolov5_fusion_FLIR_p3_only_bcam.yaml
@@ -1,79 +1,98 @@
-# yolov5l_fusion_FLIR_p3_bcam.yaml
-# Single BCAM at P3 only
+# P3 BCAM FIX: Lighter processing + direct RGB/Thermal input
+# Avoid the corrupted concatenation → split approach
+
 nc: 3
 depth_multiple: 1.00
 width_multiple: 1.00
 
 anchors:
   - [10,13, 16,30, 33,23]
-  - [30,61, 62,45, 59,119]
+  - [30,61, 62,45, 59,119]  
   - [116,90, 156,198, 373,326]
 
 backbone:
   [
-    ######### Dual Streams #########
-    # RGB stream
-    [ -1, 1, Focus, [64, 3] ],             # 0
-    [ -1, 1, Conv, [128, 3, 2] ],          # 1
-    [ -1, 3, C3, [128] ],                  # 2
-    [ -1, 1, Conv, [256, 3, 2] ],          # 3
-    [ -1, 9, C3, [256] ],                  # 4 - RGB P3
-    [ -1, 1, Conv, [512, 3, 2] ],          # 5
-    [ -1, 9, C3, [512] ],                  # 6 - RGB P4
-    [ -1, 1, Conv, [1024, 3, 2] ],         # 7
-    [ -1, 1, SPP, [1024, [5, 9, 13]] ],    # 8
-    [ -1, 3, C3, [1024, False] ],          # 9 - RGB P5
+    ######### Standard YOLO Dual Streams (0-19) #############
+    # RGB Stream: 0-9
+    [-1, 1, Focus, [64, 3]],        # 0
+    [-1, 1, Conv, [128, 3, 2]],     # 1
+    [-1, 3, C3, [128]],             # 2
+    [-1, 1, Conv, [256, 3, 2]],     # 3
+    [-1, 9, C3, [256]],             # 4 <- RGB P3
+    [-1, 1, Conv, [512, 3, 2]],     # 5
+    [-1, 9, C3, [512]],             # 6 <- RGB P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 7
+    [-1, 1, SPP, [1024, [5, 9, 13]]], # 8
+    [-1, 3, C3, [1024, False]],     # 9 <- RGB P5
 
-    # Thermal stream
-    [ -4, 1, Focus, [64, 3] ],             # 10
-    [ -1, 1, Conv, [128, 3, 2] ],          # 11
-    [ -1, 3, C3, [128] ],                  # 12
-    [ -1, 1, Conv, [256, 3, 2] ],          # 13
-    [ -1, 9, C3, [256] ],                  # 14 - T P3
-    [ -1, 1, Conv, [512, 3, 2] ],          # 15
-    [ -1, 9, C3, [512] ],                  # 16 - T P4
-    [ -1, 1, Conv, [1024, 3, 2] ],         # 17
-    [ -1, 1, SPP, [1024, [5, 9, 13]] ],    # 18
-    [ -1, 3, C3, [1024, False] ],          # 19 - T P5
+    # Thermal Stream: 10-19
+    [-4, 1, Focus, [64, 3]],        # 10
+    [-1, 1, Conv, [128, 3, 2]],     # 11
+    [-1, 3, C3, [128]],             # 12
+    [-1, 1, Conv, [256, 3, 2]],     # 13
+    [-1, 9, C3, [256]],             # 14 <- Thermal P3
+    [-1, 1, Conv, [512, 3, 2]],     # 15
+    [-1, 9, C3, [512]],             # 16 <- Thermal P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 17
+    [-1, 1, SPP, [1024, [5, 9, 13]]], # 18
+    [-1, 3, C3, [1024, False]],     # 19 <- Thermal P5
 
-    ######### Fusion #########
-    # P5 fusion (simple elementwise or concat+conv)
-    [ [9, 19], 1, Concat, [1] ],           # 20
-    [ -1, 1, Conv, [1024, 1, 1] ],         # 21 fused P5
-
-    # P4 fusion (simple elementwise or concat+conv)
-    [ [6, 16], 1, Concat, [1] ],           # 22
-    [ -1, 1, Conv, [512, 1, 1] ],          # 23 fused P4
-
-    # P3 fusion → BCAM
-    [ [4, 14], 1, BCAM_SingleOutput, [256] ],  # 24 fused P3 with BCAM
+    ######### FIXED: P5 + P4 + LIGHTWEIGHT P3 #############
+    
+    # Step 1: P5 BCAM (same as working)
+    [[9,19], 1, BCAM_SingleOutput, [1024]],         # 20: P5 fused
+    
+    # Step 2: P4 BCAM (same as working)
+    [20, 1, Conv, [512, 1, 1]],                     # 21: Project P5 context
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 22: Upsample P5 to P4 size
+    [[6, 16, 22], 1, Concat, [1]],                  # 23: Cat RGB_P4 + Thermal_P4 + P5_context
+    [-1, 1, Conv, [512, 1, 1]],                     # 24: Project concatenated features
+    [-1, 1, Conv, [512, 1, 1]],                     # 25: RGB P4 enhanced
+    [24, 1, Conv, [512, 1, 1]],                     # 26: Thermal P4 enhanced
+    [[25, 26], 1, BCAM_SingleOutput, [512]],        # 27: P4 BCAM
+    
+    # Step 3: LIGHTWEIGHT P3 BCAM - Use ORIGINAL RGB/Thermal (not corrupted)
+    # Skip the concatenation → split corruption
+    [27, 1, Conv, [256, 1, 1]],                     # 28: P4 context for injection
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 29: P4 context to P3 size
+    
+    # Add context to original P3 features via element-wise addition
+    [4, 1, Conv, [256, 1, 1]],                      # 30: RGB P3 adapted
+    [14, 1, Conv, [256, 1, 1]],                     # 31: Thermal P3 adapted  
+    [[30, 29], 1, Add, []],                         # 32: RGB P3 + P4 context
+    [[31, 29], 1, Add, []],                         # 33: Thermal P3 + P4 context
+    
+    # Now apply BCAM to CLEAN features
+    [[32, 33], 1, BCAM_SingleOutput, [256]],        # 34: P3 BCAM on clean features
   ]
 
 head:
   [
-    # Head path P5
-    [21, 1, Conv, [512, 1, 1]],            # 25
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 26 upsample P5
+    ######### Head with Fixed P3 #############
+    # P5 path
+    [20, 1, Conv, [512, 1, 1]],                     # 35: Project P5 fused
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 36: P5 upsample
+    
+    # P4 path
+    [27, 1, Conv, [256, 1, 1]],                     # 37: Project P4 BCAM
+    [[36, 37], 1, Concat, [1]],                     # 38: Concat P5_up + P4_BCAM
+    [-1, 3, C3, [512, False]],                      # 39: Process P4
+    
+    # P3 path - Use clean P3 BCAM result
+    [-1, 1, Conv, [256, 1, 1]],                     # 40: Project for P3
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 41: Upsample to P3
+    [34, 1, Conv, [256, 1, 1]],                     # 42: Project P3 BCAM (clean!)
+    [[41, 42], 1, Concat, [1]],                     # 43: Concat P4_up + P3_BCAM
+    [-1, 3, C3, [256, False]],                      # 44: P3 final
 
-    # Head path P4
-    [23, 1, Conv, [256, 1, 1]],            # 27
-    [[26, 27], 1, Concat, [1]],            # 28
-    [-1, 3, C3, [512, False]],             # 29 P4
+    # Downsample path
+    [-1, 1, Conv, [256, 3, 2]],                     # 45: P3→P4 down
+    [[45, 39], 1, Concat, [1]],                     # 46: Cat with P4 path
+    [-1, 3, C3, [512, False]],                      # 47: P4 final
 
-    # Head path P3 (BCAM fused)
-    [24, 1, Conv, [256, 1, 1]],            # 30
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 31
-    [[31, 24], 1, Concat, [1]],            # 32
-    [-1, 3, C3, [256, False]],             # 33 P3
+    [-1, 1, Conv, [512, 3, 2]],                     # 48: P4→P5 down
+    [[48, 35], 1, Concat, [1]],                     # 49: Cat with P5 path
+    [-1, 3, C3, [1024, False]],                     # 50: P5 final
 
-    # Downsample paths
-    [-1, 1, Conv, [256, 3, 2]],            # 34
-    [[34, 29], 1, Concat, [1]],            # 35
-    [-1, 3, C3, [512, False]],             # 36 P4
-
-    [-1, 1, Conv, [512, 3, 2]],            # 37
-    [[37, 25], 1, Concat, [1]],            # 38
-    [-1, 3, C3, [1024, False]],            # 39 P5
-
-    [[33, 36, 39], 1, Detect, [nc, anchors]],
+    [[44, 47, 50], 1, Detect, [nc, anchors]],       # Detection heads
   ]
