--- a/models/transformer/yolov5_flir_p3_prog_bcam_test.yaml
+++ b/models/transformer/yolov5_flir_p3_prog_bcam_test.yaml
@@ -1,5 +1,5 @@
-# TEST 2: P3 BCAM with Channel Attention Context Integration
-# Uses P4 context as channel-wise weights instead of spatial addition
+# CORRECTED: Gated P3 BCAM - Keeps Working P5+P4 Architecture Intact
+# Only modifies P3 processing to test gated context integration
 
 nc: 3
 depth_multiple: 1.00
@@ -37,12 +37,12 @@ backbone:
     [-1, 1, SPP, [1024, [5, 9, 13]]], # 18
     [-1, 3, C3, [1024, False]],     # 19 <- Thermal P5
 
-    ######### P5 + P4 BCAM + P3 CHANNEL ATTENTION #############
+    ######### WORKING P5+P4 BCAM (UNCHANGED) #############
     
-    # Step 1: P5 BCAM (same as working approach)
+    # Step 1: P5 BCAM (EXACT SAME AS WORKING VERSION)
     [[9,19], 1, BCAM_SingleOutput, [1024]],         # 20: P5 fused
     
-    # Step 2: P4 BCAM (same as working approach) 
+    # Step 2: P4 BCAM (EXACT SAME AS WORKING VERSION)
     [20, 1, Conv, [512, 1, 1]],                     # 21: Project P5 context
     [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 22: Upsample P5 to P4 size
     [[6, 16, 22], 1, Concat, [1]],                  # 23: Cat RGB_P4 + Thermal_P4 + P5_context
@@ -51,48 +51,45 @@ backbone:
     [24, 1, Conv, [512, 1, 1]],                     # 26: Thermal P4 enhanced
     [[25, 26], 1, BCAM_SingleOutput, [512]],        # 27: P4 BCAM
     
-    # Step 3: Generate P4 global context for P3 guidance
-    [6, 1, nn.AdaptiveAvgPool2d, [1]],               # 28: P4 RGB global context (Bx512x1x1)
-    [16, 1, nn.AdaptiveAvgPool2d, [1]],              # 29: P4 Thermal global context (Bx512x1x1)
-    [[28, 29], 1, Concat, [1]],                     # 30: Combined P4 context (Bx1024x1x1)
-    [-1, 1, Conv, [64, 1, 1]],                      # 31: Compress context (Bx64x1x1)
+    ######### ONLY CHANGE: GATED P3 PROCESSING #############
     
-    # Step 4: Apply channel attention to P3 features
-    [[4, 31], 1, ChannelAttention, [256, 64]],      # 32: RGB P3 + channel attention from P4
-    [[14, 31], 1, ChannelAttention, [256, 64]],     # 33: Thermal P3 + channel attention from P4
+    # Step 3: Clean P3 BCAM (isolated, like Test 1 that got 0.66 mAP)
+    [[4, 14], 1, BCAM_SingleOutput, [256]],         # 28: Clean P3 BCAM (no context)
     
-    # Step 5: P3 BCAM on channel-guided features
-    [[32, 33], 1, BCAM_SingleOutput, [256]],        # 34: P3 BCAM with channel guidance
+    # Step 4: Gated integration of P4 context
+    [27, 1, Conv, [256, 1, 1]],                     # 29: Project P4 BCAM result (512→256)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 30: Upsample P4 context to P3 size
+    [[28, 30], 1, GatedFusion, [256, 256]],         # 31: Gated P3+P4 fusion
   ]
 
 head:
   [
-    ######### Head Using All Three Progressive BCAMs #############
+    ######### SAME HEAD AS WORKING VERSION (with index updates) #############
     
-    # P5 path: Use P5 BCAM result
-    [20, 1, Conv, [512, 1, 1]],                     # 35: Project P5 fused
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 36: P5 upsample
+    # P5 path (SAME AS WORKING)
+    [20, 1, Conv, [512, 1, 1]],                     # 32: Project P5 fused
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 33: P5 upsample
     
-    # P4 path: Use P4 BCAM result
-    [27, 1, Conv, [256, 1, 1]],                     # 37: Project P4 BCAM
-    [[36, 37], 1, Concat, [1]],                     # 38: Concat P5_up + P4_BCAM
-    [-1, 3, C3, [512, False]],                      # 39: Process P4
+    # P4 path (SAME AS WORKING) - Use P4 BCAM result
+    [27, 1, Conv, [256, 1, 1]],                     # 34: Project P4 BCAM
+    [[33, 34], 1, Concat, [1]],                     # 35: Concat P5_up + P4_BCAM
+    [-1, 3, C3, [512, False]],                      # 36: Process P4
     
-    # P3 path: Use P3 BCAM result with channel attention
-    [-1, 1, Conv, [256, 1, 1]],                     # 40: Project for P3
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 41: Upsample to P3
-    [34, 1, Conv, [256, 1, 1]],                     # 42: Project P3 BCAM
-    [[41, 42], 1, Concat, [1]],                     # 43: Concat P4_up + P3_BCAM
-    [-1, 3, C3, [256, False]],                      # 44: P3 final
+    # P3 path - Use GATED P3 result (only change)
+    [-1, 1, Conv, [256, 1, 1]],                     # 37: Project for P3
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 38: Upsample to P3
+    [31, 1, Conv, [256, 1, 1]],                     # 39: Project gated P3 result
+    [[38, 39], 1, Concat, [1]],                     # 40: Concat P4_up + gated_P3
+    [-1, 3, C3, [256, False]],                      # 41: P3 final
 
-    # Standard detection head
-    [-1, 1, Conv, [256, 3, 2]],                     # 45: P3→P4 down
-    [[45, 39], 1, Concat, [1]],                     # 46: Cat with P4 path
-    [-1, 3, C3, [512, False]],                      # 47: P4 final
+    # Downsample path (SAME AS WORKING)
+    [-1, 1, Conv, [256, 3, 2]],                     # 42: P3→P4 down
+    [[42, 36], 1, Concat, [1]],                     # 43: Cat with P4 path
+    [-1, 3, C3, [512, False]],                      # 44: P4 final
 
-    [-1, 1, Conv, [512, 3, 2]],                     # 48: P4→P5 down
-    [[48, 35], 1, Concat, [1]],                     # 49: Cat with P5 path
-    [-1, 3, C3, [1024, False]],                     # 50: P5 final
+    [-1, 1, Conv, [512, 3, 2]],                     # 45: P4→P5 down
+    [[45, 32], 1, Concat, [1]],                     # 46: Cat with P5 path
+    [-1, 3, C3, [1024, False]],                     # 47: P5 final
 
-    [[44, 47, 50], 1, Detect, [nc, anchors]],       # Detection heads
+    [[41, 44, 47], 1, Detect, [nc, anchors]],       # Detection heads
   ]
