--- a/models/transformer/bcam_test_3op_flir_allp3p4p5.yaml
+++ b/models/transformer/bcam_test_3op_flir_allp3p4p5.yaml
@@ -61,31 +61,30 @@ backbone:
 # --- HEAD (global layers start after backbone 0..22) ---
 head:
   [
-    # P5 path
-    [20, 1, Conv, [512, 1, 1]],                  # 23: from BCAM P5 (20×20), 3072→512 (parser sets in_ch)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 24: 20→40
-
-    # P4 path
-    [6, 1, Conv, [512, 1, 1]],                   # 25: RGB P4 (40×40)
-    [[-1, -2], 1, Concat, [1]],                  # 26: 40×40 concat
-    [-1, 3, C3, [512, False]],                   # 27: P4 out (40×40)
-
-    # P3 path
+    # P5 path - start from BCAM P5
+    [20, 1, Conv, [512, 1, 1]],                  # 23: P5 BCAM (3072→512)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 24: Upsample to P4 size
+    
+    # P4 path - use BCAM P4
+    [21, 1, Conv, [512, 1, 1]],                  # 25: P4 BCAM (1536→512)
+    [[-1, -2], 1, Concat, [1]],                  # 26: Concat upsampled P5 + P4
+    [-1, 3, C3, [512, False]],                   # 27: Process P4
+    
+    # P3 path - use BCAM P3
     [-1, 1, Conv, [256, 1, 1]],                  # 28: 512→256
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 29: 40→80
-    [4, 1, Conv, [256, 1, 1]],                   # 30: RGB P3 (80×80)
-    [[-1, -2], 1, Concat, [1]],                  # 31: 80×80 concat
-    [-1, 3, C3, [256, False]],                   # 32: P3 out (80×80)
-
-    # Downsample back to P4 and fuse with P4 path
-    [-1, 1, Conv, [256, 3, 2]],                  # 33: 80→40
-    [[-1, 27], 1, Concat, [1]],                  # 34: concat with P4 out (layer 27, 40×40)
-    [-1, 3, C3, [512, False]],                   # 35: final P4 (40×40)
-
-    # Downsample to P5 and fuse with P5 path (pre-upsample)
-    [-1, 1, Conv, [512, 3, 2]],                  # 36: 40→20
-    [[-1, 23], 1, Concat, [1]],                  # 37: concat with layer 23 (P5 proj, 20×20)
-    [-1, 3, C3, [1024, False]],                  # 38: final P5 (20×20)
-
-    [[32, 35, 38], 1, Detect, [nc, anchors]],    # 39: Detect [P3,P4,P5]
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 29: Upsample to P3 size
+    [22, 1, Conv, [256, 1, 1]],                  # 30: P3 BCAM (768→256)
+    [[-1, -2], 1, Concat, [1]],                  # 31: Concat upsampled P4 + P3
+    [-1, 3, C3, [256, False]],                   # 32: Process P3
+    
+    # Downsample path
+    [-1, 1, Conv, [256, 3, 2]],                  # 33: P3→P4 downsample
+    [[-1, 27], 1, Concat, [1]],                  # 34: Concat with P4 path
+    [-1, 3, C3, [512, False]],                   # 35: Final P4
+    
+    [-1, 1, Conv, [512, 3, 2]],                  # 36: P4→P5 downsample
+    [[-1, 23], 1, Concat, [1]],                  # 37: Concat with P5 path
+    [-1, 3, C3, [1024, False]],                  # 38: Final P5
+    
+    [[32, 35, 38], 1, Detect, [nc, anchors]],    # 39: Detect
   ]
